# MiniAES

./: README.md  app.py  pyproject.toml  requirements.txt
docs/: irreducible_polynomial_note.md  mds_note.md  s_box_note.md  specifications.md
src/mini_aes/: DecryptionFacade.py  EncryptionFacade.py  __init__.py
src/mini_aes/block_mode/data/: BlockCiphertext.py  BlockKey.py  BlockPlaintext.py
src/mini_aes/block_mode/operations/: BlockDecryptionOperation.py  BlockEncryptionOperation.py  BlockOperation.py
src/mini_aes/data/: CiphertextBase.py  KeyBase.py  PlaintextBase.py  RWPermissionOnEncOrDec.py  Readable.py  Writable.py
src/mini_aes/io/files/: FileReaderInterface.py  FileWriterInterface.py
src/mini_aes/io/files/factories/: FileReaderFactory.py  FileWriterFactory.py
src/mini_aes/io/files/implementations/: BinaryFileReader.py  BinaryFileWriter.py
src/mini_aes/logs/: LogManager.py
src/mini_aes/nonblock_mode/data/: NonBlockCiphertext.py  NonBlockKey.py  NonBlockPlaintext.py
src/mini_aes/nonblock_mode/operations/: NonBlockDecryptionOperation.py  NonBlockEncryptionOperation.py
src/mini_aes/operations/: DecryptionOperationBase.py  EncryptionOperationBase.py  GeneralOperation.py  KeyOperation.py
src/mini_aes/utils/: Bit.py
tests/: TestBit.py  TestOperation.py
